feat: create header loayaut

--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,53 +1,21 @@
 <header class="header">
   <div class="header__container">
     <div class="header__inner">
-      <div class="header__top top-header">
-        <div class="top-header__item">
-          <img src="@img/icon/i-location.svg" alt="" title="" />
-          <p>г. Кемерово, ул Красная, д 14 А</p>
-        </div>
-        <div class="top-header__item">
-          <img src="@img/icon/i-time.svg" alt="" title="" />
-          <p>Пн-Пт: 8:30-19:00 Сб-Вс: 8:30-16:00</p>
-        </div>
-        <div class="top-header__item">
-          <img src="@img/icon/i-phone.svg" alt="" title="" />
+      <div class="header__logo">Трапеза</div>
+      <nav class="nav">
+        <a href="#" class="nav__link">О нас</a>
+        <a href="#" class="nav__link">Банкетный зал</a>
+        <a href="#" class="nav__link">Скидки и акции</a>
+        <a href="#" class="nav__link">Фотогаллерея</a>
+        <a href="#" class="nav__link">Новости и статьи</a>
+        <a href="#" class="nav__link">Контакты</a>
+      </nav>
+      <div class="header__contact">
+        <span>Свяжитесь с нами</span>
+        <div class="header__hide">
           <a href="tel:+79999999999">+7 (999) 999-99-99</a>
-        </div>
-        <div class="top-header__item top-header__socials">
-          <a href="#"><img src="@img/icon/i-vk.svg" alt="" title="" /></a>
-          <a href="#"><img src="@img/icon/i-wa.svg" alt="" title="" /></a>
-          <a href="#"><img src="@img/icon/i-telegram.svg" alt="" title="" /></a>
-        </div>
-      </div>
-      <div class="header__bottom bottom-header">
-        <div class="bottom-header__logo">
-          <img src="@img/logo.png" alt="" />
-          <div class="bottom-header__logo--text">
-            <p>ДЕНТА-ЛАЙТ</p>
-            <p>СТОМАТОЛОГИЧЕСКАЯ КЛИНИКА</p>
-          </div>
-        </div>
-        <nav class="bottom-header__nav menu">
-          <ul class="menu__list">
-            <li class="menu__item menu__item--service">
-              <img src="@img/icon/i-dot.svg" alt="" title="" />
-              <a href="#" class="menu__link">Услуги</a>
-            </li>
-            <li class="menu__item">
-              <a href="#" class="menu__link">О клинике</a>
-              <img src="@img/icon/i-chevron-down.svg" alt="" title="" />
-            </li>
-            <li class="menu__item">
-              <a href="#" class="menu__link">Специалисты</a>
-            </li>
-            <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Цены</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
-          </ul>
-        </nav>
-        <div class="bottom-header__button">
-          <button type="button" class="">Записаться</button>
+          <a href="mailto:trapeza@mail.ru">trapeza@mail.ru</a>
+          <button type="button">Оставить заявку</button>
         </div>
       </div>
     </div>
