feat: merge index-menu-food in develop

--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -4,10 +4,12 @@
       <div class="header__logo">Трапеза</div>
       <nav class="nav">
         <a href="#" class="nav__link">О нас</a>
+        <a href="#" class="nav__link">Меню недели</a>
         <a href="#" class="nav__link">Банкетный зал</a>
-        <a href="#" class="nav__link">Скидки и акции</a>
+        <a href="#" class="nav__link">Акции</a>
         <a href="#" class="nav__link">Фотогаллерея</a>
-        <a href="#" class="nav__link">Новости и статьи</a>
+        <a href="#" class="nav__link">Новости</a>
+        <a href="#" class="nav__link">Вакансии</a>
         <a href="#" class="nav__link">Контакты</a>
       </nav>
       <div class="header__contact">
