--- a/src/html/side-menu.html
+++ b/src/html/side-menu.html
@@ -1,28 +1,29 @@
 <div class="side-menu">
   <div class="side-menu__inner">
     <button type="button" class="side-menu__open">
-      Меню <span><i class="fa-solid fa-bars"></i></span>
+      <p>Меню</p>
+      <span><i class="fa-solid fa-bars"></i></span>
     </button>
     <ul class="side-menu__list">
       <li class="side-menu__item">
         <img src="@img/icon/i-food.svg" alt="" />
-        <a href="#" class="side-menu__link">Завтраки</a>
+        <a href="#" class="side-menu__link">Банкетное</a>
       </li>
       <li class="side-menu__item">
         <img src="@img/icon/i-food.svg" alt="" />
-        <a href="#" class="side-menu__link">Горячее</a>
+        <a href="#" class="side-menu__link">Поминально</a>
       </li>
       <li class="side-menu__item">
         <img src="@img/icon/i-food.svg" alt="" />
-        <a href="#" class="side-menu__link">Десерты</a>
+        <a href="#" class="side-menu__link">Завтрак</a>
       </li>
       <li class="side-menu__item">
         <img src="@img/icon/i-food.svg" alt="" />
-        <a href="#" class="side-menu__link">Салаты</a>
+        <a href="#" class="side-menu__link">Обед</a>
       </li>
       <li class="side-menu__item">
         <img src="@img/icon/i-food.svg" alt="" />
-        <a href="#" class="side-menu__link">Супы</a>
+        <a href="#" class="side-menu__link">Выпечка</a>
       </li>
       <li class="side-menu__item">
         <img src="@img/icon/i-food.svg" alt="" />
@@ -30,7 +31,11 @@
       </li>
       <li class="side-menu__item">
         <img src="@img/icon/i-food.svg" alt="" />
-        <a href="#" class="side-menu__link">Банкеты</a>
+        <a href="#" class="side-menu__link">Ужин</a>
+      </li>
+      <li class="side-menu__item">
+        <img src="@img/icon/i-food.svg" alt="" />
+        <a href="#" class="side-menu__link">Фуршетное</a>
       </li>
     </ul>
   </div>
