--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -3,22 +3,37 @@
     <div class="header__inner">
       <div class="header__logo">Трапеза</div>
       <nav class="nav">
-        <a href="#" class="nav__link">О нас</a>
-        <a href="#" class="nav__link">Меню недели</a>
-        <a href="#" class="nav__link">Банкетный зал</a>
-        <a href="#" class="nav__link">Акции</a>
-        <a href="#" class="nav__link">Фотогаллерея</a>
-        <a href="#" class="nav__link">Новости</a>
-        <a href="#" class="nav__link">Вакансии</a>
-        <a href="#" class="nav__link">Контакты</a>
+        <a href="#" class="nav__link nav__link--active">
+          <span>Понедельник</span>
+          <span class="day-number">12 декабря</span>
+        </a>
+        <a href="#" class="nav__link">
+          <span>Вторник</span>
+          <span class="day-number">13 декабря</span>
+        </a>
+        <a href="#" class="nav__link">
+          <span>Среда</span>
+          <span class="day-number">14 декабря</span>
+        </a>
+        <a href="#" class="nav__link">
+          <span>Четверг</span>
+          <span class="day-number">15 декабря</span>
+        </a>
+        <a href="#" class="nav__link">
+          <span>Пятница</span>
+          <span class="day-number">16 декабря</span>
+        </a>
+        <a href="#" class="nav__link">
+          <span>Суббота</span>
+          <span class="day-number">17 декабря</span>
+        </a>
+        <a href="#" class="nav__link">
+          <span>Воскресенье</span>
+          <span class="day-number">18 декабря</span>
+        </a>
       </nav>
-      <div class="header__contact">
-        <span>Свяжитесь с нами</span>
-        <div class="header__hide">
-          <a href="tel:+79999999999">+7 (999) 999-99-99</a>
-          <a href="mailto:trapeza@mail.ru">trapeza@mail.ru</a>
-          <button type="button">Оставить заявку</button>
-        </div>
+      <div class="header__burger">
+        <button type="button"><span></span></button>
       </div>
     </div>
   </div>
