--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
         <div class="index-slider">
           <div class="index-slider__slider swiper">
             <div class="index-slider__wrapper swiper-wrapper">
-              <div class="index-slider__slide swiper-slide" style="background-image: url(../img/slide-1.webp)">
+              <div class="index-slider__slide swiper-slide" style="background-image: url(../img/slide-3.jpg)">
                 <div class="index-slider__container">
                   <div class="index-slider__inner">
                     <h1 class="index-slider__logo">Трапеза</h1>
-                    <p class="index-slider__subtitle">Кафе-Столовая</p>
+                    <p class="index-slider__subtitle--name">Кафе-Столовая</p>
                     <a href="#" class="index-slider__btn">
                       Подробнее о нас
                       <span class="line-top"></span>
@@ -28,10 +28,12 @@
               <div class="index-slider__slide swiper-slide" style="background-image: url(../img/slide-1.webp)">
                 <div class="index-slider__container">
                   <div class="index-slider__inner">
-                    <h1 class="index-slider__logo">Трапеза</h1>
-                    <p class="index-slider__subtitle">Кафе-Столовая</p>
+                    <h2 class="index-slider__title">Освободите себя от приготовления блюд перед Новым годом!</h2>
+                    <p class="index-slider__subtitle">
+                      Сделайте заказ для своего праздничного стола и заберите его 31 декабря!
+                    </p>
                     <a href="#" class="index-slider__btn">
-                      Подробнее о нас
+                      Посмотреть меню
                       <span class="line-top"></span>
                       <span class="line-bottom"></span>
                     </a>
@@ -51,6 +53,9 @@
         </div>
 
         <div class="menu-list">
+          <div class="anchor-scroll">
+            <div class="anchor-scroll-hint"></div>
+          </div>
           <div class="menu-list__container">
             <div class="menu-list__inner">
               <div class="menu-list__leftside">
@@ -758,6 +763,158 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+
+        <div class="about" style="background-image: url(../img/about.jpg)">
+          <div class="about__container">
+            <h2 class="about__title title">О нас</h2>
+            <div class="about__inner">
+              <div class="about__content">
+                <p>
+                  Кафе-Столовая Трапеза – это высокопрофессиональная команда специалистов, на счету которой десятки
+                  проведенных банкетов, отмеченных восхищенными отзывами гостей. Мы достигли этого благодаря особому
+                  подходу к организации кухни и планированию мероприятий. Мы считаем, что в нашей работе нет мелочей,
+                  только главные детали!
+                </p>
+              </div>
+              <a href="" class="about__btn">Подробнее о нас</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="reviews">
+          <div class="reviews__container">
+            <div class="reviews__inner">
+              <div class="reviews__block-top">
+                <h2 class="reviews__title title">Отзывы клиентов</h2>
+              </div>
+              <div class="reviews__slider swiper">
+                <div class="reviews__wrapper swiper-wrapper">
+                  <div class="reviews__slide swiper-slide">
+                    <div class="reviews__quote">"</div>
+                    <div class="reviews__top">
+                      <div class="reviews__avatar">
+                        <img src="@img/face-1.jpg" alt="" />
+                      </div>
+                      <div class="reviews__name">
+                        <p>Иван Сидоров</p>
+                        <span>12.12.2023</span>
+                      </div>
+                    </div>
+                    <div class="reviews__bottom">
+                      <div class="reviews__text">
+                        <p>
+                          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat expedita vero adipisci quia
+                          quas? Perferendis iure illo commodi cum, accusamus officiis eius neque quo, voluptate aliquid
+                          minima ullam unde culpa! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat
+                          expedita vero adipisci quia quas? Perferendis iure illo commodi cum, accusamus officiis eius
+                          neque quo, voluptate aliquid minima ullam unde culpa!
+                        </p>
+                      </div>
+                      <button type="button" class="reviews__btn">Читать отзыв полностью</button>
+                    </div>
+                  </div>
+                  <div class="reviews__slide swiper-slide">
+                    <div class="reviews__quote">"</div>
+                    <div class="reviews__top">
+                      <div class="reviews__avatar">
+                        <img src="@img/face-1.jpg" alt="" />
+                      </div>
+                      <div class="reviews__name">
+                        <p>Иван Сидоров</p>
+                        <span>12.12.2023</span>
+                      </div>
+                    </div>
+                    <div class="reviews__bottom">
+                      <div class="reviews__text">
+                        <p>
+                          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat expedita vero adipisci quia
+                          quas? Perferendis iure illo commodi cum, accusamus officiis eius neque quo, voluptate aliquid
+                          minima ullam unde culpa! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat
+                          expedita vero adipisci quia quas? Perferendis iure illo commodi cum, accusamus officiis eius
+                          neque quo, voluptate aliquid minima ullam unde culpa!
+                        </p>
+                      </div>
+                      <button type="button" class="reviews__btn">Читать отзыв полностью</button>
+                    </div>
+                  </div>
+                  <div class="reviews__slide swiper-slide">
+                    <div class="reviews__quote">"</div>
+                    <div class="reviews__top">
+                      <div class="reviews__avatar">
+                        <img src="@img/face-1.jpg" alt="" />
+                      </div>
+                      <div class="reviews__name">
+                        <p>Иван Сидоров</p>
+                        <span>12.12.2023</span>
+                      </div>
+                    </div>
+                    <div class="reviews__bottom">
+                      <div class="reviews__text">
+                        <p>
+                          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat expedita vero adipisci quia
+                          quas? Perferendis iure illo commodi cum, accusamus officiis eius neque quo, voluptate aliquid
+                          minima ullam unde culpa! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat
+                          expedita vero adipisci quia quas? Perferendis iure illo commodi cum, accusamus officiis eius
+                          neque quo, voluptate aliquid minima ullam unde culpa!
+                        </p>
+                      </div>
+                      <button type="button" class="reviews__btn">Читать отзыв полностью</button>
+                    </div>
+                  </div>
+                  <div class="reviews__slide swiper-slide">
+                    <div class="reviews__quote">"</div>
+                    <div class="reviews__top">
+                      <div class="reviews__avatar">
+                        <img src="@img/face-1.jpg" alt="" />
+                      </div>
+                      <div class="reviews__name">
+                        <p>Иван Сидоров</p>
+                        <span>12.12.2023</span>
+                      </div>
+                    </div>
+                    <div class="reviews__bottom">
+                      <div class="reviews__text">
+                        <p>
+                          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat expedita vero adipisci quia
+                          quas? Perferendis iure illo commodi cum, accusamus officiis eius neque quo, voluptate aliquid
+                          minima ullam unde culpa! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat
+                          expedita vero adipisci quia quas? Perferendis iure illo commodi cum, accusamus officiis eius
+                          neque quo, voluptate aliquid minima ullam unde culpa!
+                        </p>
+                      </div>
+                      <button type="button" class="reviews__btn">Читать отзыв полностью</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="reviews__controls">
+                  <button type="button" class="reviews__controls-btn">Оставить отзыв</button>
+                  <div class="swiper-pagination reviews__controls-pagination"></div>
+                  <div class="reviews__controls-inherit">
+                    <div class="swiper-button-prev reviews__controls-prev"></div>
+                    <div class="swiper-button-next reviews__controls-next"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="callback" style="background-image: url(../img/callback.webp)">
+          <div class="callback__container">
+            <h2 class="callback__title title">Напишите нам !</h2>
+            <p class="callback__subtitle">
+              Если вы хотите заказать корпоративные обеды, банкет, кейтеринг или другие мероприятия, предложить
+              сотрудничество или связаться по другому интересующему вас вопросу, заполните форму связи и мы обязательно
+              ответим!
+            </p>
+            <form action="#" class="callback__form">
+              <input type="text" name="name" placeholder="Имя" class="callback__input" />
+              <input type="text" name="phone" placeholder="Телефон" class="callback__input" />
+              <input type="text" name="message" placeholder="Сообщение" class="callback__input" />
+              <button type="submit" class="callback__submit">Отправить</button>
+            </form>
           </div>
         </div>
       </main>
