feat: finalization of the callback block

--- a/src/index.html
+++ b/src/index.html
@@ -917,6 +917,12 @@
             </form>
           </div>
         </div>
+
+        <div class="contact">
+          <div class="contact__container">
+            <div class="contact__row">.contact</div>
+          </div>
+        </div>
       </main>
       @@include('html/_footer.htm',{})
     </div>
