--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,3 +1,53 @@
+<footer class="footer">
+  <div class="footer__container">
+    <div class="footer__grid">
+      <div class="footer__col">
+        <p class="footer__title">Контакты</p>
+        <div class="footer__item">
+          <span>Адрес: </span>
+          <span>г.Томск ул. Ленина 193</span>
+        </div>
+        <div class="footer__item">
+          <span>Телефон: </span>
+          <span>8(999) 999-99-99</span>
+        </div>
+        <div class="footer__item">
+          <span>Время работы: </span>
+          <span>пн-пт: 8:00-20:00, сб-вс: 10:00-20:00</span>
+        </div>
+        <div class="footer__item">
+          <span>Электронная почта: </span>
+          <span>trapeza@mail.ru</span>
+        </div>
+        <div class="footer__social">
+          <a href="#"><img src="@img/icon/i-vk.svg" alt="" /></a>
+          <a href="#"><img src="@img/icon/i-wa.svg" alt="" /></a>
+          <a href="#"><img src="@img/icon/i-telegram.svg" alt="" /></a>
+        </div>
+      </div>
+      <div class="footer__col">
+        <p class="footer__title">Меню</p>
+        <nav class="footer__nav">
+          <a href="#">Горячее</a>
+          <a href="#">Салаты</a>
+          <a href="#">Выпечка</a>
+          <a href="#">Банкетное меню</a>
+          <a href="#">Поминальное меню</a>
+          <a href="#">Меню дня</a>
+        </nav>
+      </div>
+      <div class="footer__col">
+        <div class="footer__logo">Трапеза</div>
+        <nav class="footer__nav">
+          <a href="#">Политика конфиденциальности</a>
+          <a href="#">Статьи</a>
+          <a href="#">Отзывы</a>
+          <a href="#">Контакты</a>
+        </nav>
+      </div>
+    </div>
+  </div>
+</footer>
 <div class="popup-menu">
   <button type="button" class="popup-menu__close"></button>
   <nav class="popup-menu__nav">
