feat: menu revision

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" class="">
   @@include('html/_head.htm',{ "title":"Главная" })
 
   <body>
@@ -52,8 +52,8 @@
           </div>
         </div>
 
-        <div class="menu-list">
-          <div class="anchor-scroll">
+        <div class="menu-list" id="menu-list">
+          <div class="anchor-scroll" data-anchor="menu-list">
             <div class="anchor-scroll-hint"></div>
           </div>
           <div class="menu-list__container">
