--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header__container">
     <div class="header__inner">
-      <div class="header__logo">Трапеза</div>
+      <a href="#" class="header__logo">Трапеза</a>
       <nav class="nav">
         <a href="#" class="nav__link nav__link--active">
           <span>Понедельник</span>
@@ -33,7 +33,7 @@
         </a>
       </nav>
       <div class="header__burger">
-        <button type="button"><span></span></button>
+        <button type="button" id="burger"><span></span></button>
       </div>
     </div>
   </div>
