fix: image index-slider, title, subtitle

--- a/src/index.html
+++ b/src/index.html
@@ -9,23 +9,26 @@
         <div class="line-left"></div>
         <div class="line-right"></div>
         @@include('html/side-menu.html',{})
+
         <div class="index-slider">
           <div class="index-slider__slider swiper">
             <div class="index-slider__wrapper swiper-wrapper">
-              <div class="index-slider__slide swiper-slide" style="background-image: url(../img/slide-3.jpg)">
+              <div class="index-slider__slide swiper-slide" style="background-image: url(../img/slide-1.webp)">
                 <div class="index-slider__container">
                   <div class="index-slider__inner">
-                    <h1 class="index-slider__logo">Трапеза</h1>
-                    <p class="index-slider__subtitle--name">Кафе-Столовая</p>
+                    <h1 class="index-slider__title">Ждём Вас в нашей столовой!</h1>
+                    <p class="index-slider__subtitle">
+                      К нам приходят завтракать, обедать и ужинать, а также взять еду с собой.
+                    </p>
                     <a href="#" class="index-slider__btn">
-                      Подробнее о нас
+                      Наше иеню
                       <span class="line-top"></span>
                       <span class="line-bottom"></span>
                     </a>
                   </div>
                 </div>
               </div>
-              <div class="index-slider__slide swiper-slide" style="background-image: url(../img/slide-1.webp)">
+              <div class="index-slider__slide swiper-slide" style="background-image: url(../img/slide-3.jpg)">
                 <div class="index-slider__container">
                   <div class="index-slider__inner">
                     <h2 class="index-slider__title">Освободите себя от приготовления блюд перед Новым годом!</h2>
@@ -33,7 +36,7 @@
                       Сделайте заказ для своего праздничного стола и заберите его 31 декабря!
                     </p>
                     <a href="#" class="index-slider__btn">
-                      Посмотреть меню
+                      Новогоднее меню
                       <span class="line-top"></span>
                       <span class="line-bottom"></span>
                     </a>
