--- a/src/html/_popup.htm
+++ b/src/html/_popup.htm
@@ -1,17 +1,17 @@
-<div id="popup" aria-hidden="true" class="popup popup__enroll">
-	<div class="popup__wrapper">
-		<div class="popup__content">
-			<button data-close type="button" class="popup__close">
-				X
-			</button>
-			<p class="popup__title">Заполните форму</p>
-			<p class="popup__subtitle">и наши менеджеры с вами свяжуться</p>
-			<form action="" class="popup__form">
-				<input type="text" class="popup__input" placeholder="Ваше имя">
-				<input type="tel" class="popup__input" placeholder="Ваш номер телефона" data-tel-input>
-				<input type="text" class="popup__input  input__name _input--hide">
-				<button type="button" class="popup__submit">Отправить</button>
-			</form>
-		</div>
-	</div>
+<div id="popup" aria-hidden="true" class="popup popup-fulldescr">
+  <div class="popup__wrapper">
+    <div class="popup__content">
+      <button data-close type="button" class="popup__close">X</button>
+      <div class="popup__grid">
+        <div class="popup__image">
+          <img src="" alt="" class="popup-image" />
+        </div>
+        <div class="popup__info">
+          <p class="popup__title"></p>
+          <p class="popup__price"></p>
+          <p class="popup__descr"></p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
