feat: added social link

--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -48,6 +48,7 @@
     </div>
   </div>
 </footer>
+
 <div class="popup-menu">
   <button type="button" class="popup-menu__close"></button>
   <nav class="popup-menu__nav">
@@ -71,4 +72,19 @@
     </a>
   </div>
   <button type="button" class="popup-menu__btn">Позвонить</button>
+</div>
+
+<div class="messanger">
+  <a href="#" class="messanger__item">
+    <img src="@img/telegram-i-1.svg" alt="" />
+  </a>
+  <a href="#" class="messanger__item">
+    <img src="@img/wa-i-1.svg" alt="" />
+  </a>
+  <a href="#" class="messanger__item">
+    <img src="@img/vk-i-1.svg" alt="" />
+  </a>
+  <a href="#" class="messanger__item">
+    <img src="@img/telephone-i-1.svg" alt="" />
+  </a>
 </div>
