--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,3 +1,13 @@
+<div class="header-underline">
+  <div class="header-underline__container">
+    <div class="header-underline__list">
+      <a href="#">trapeza@mail.ru</a>
+      <p>пн-пт: 8:00-20:00, сб-вс: 10:00-20:00</p>
+      <p>г.Томск ул. Ленина 193</p>
+      <a href="tel:89999999999">8 (999) 999-99-99</a>
+    </div>
+  </div>
+</div>
 <header class="header">
   <div class="header__container">
     <div class="header__inner">
