--- a/src/html/_popup.htm
+++ b/src/html/_popup.htm
@@ -9,8 +9,10 @@
         <div class="popup__info">
           <p class="popup__title"></p>
           <p class="popup__price"></p>
+          <p class="popup__bjy"></p>
           <p class="popup__descr"></p>
         </div>
+        <button type="button" class="popup__btn">Позвонить</button>
       </div>
     </div>
   </div>
