feat: gallery block develop

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
       <div class="line-right"></div>
       @@include('html/side-menu.html',{})
 
-      <div class="index-banner" style="background-image: url(../img/banner-first.jpg);">
+      <div class="index-banner" style="background-image: url(../img/banner-first-3.jpg);">
         <div class="index-banner__container">
           <div class="index-banner__content">
             <p class="index-banner__undertitle">столовая по-домашнему</p>
-            <h1 class="index-banner__title">Трапеза</h1>
+            <h1 class="index-banner__title">трапеза</h1>
             <div class="index-banner__btns">
               <a href="#" class="index-banner__btn btn">Перейти в меню</a>
               <a href="#" class="index-banner__btn btn">Связаться</a>
@@ -40,7 +40,7 @@
                 </div>
               </div>
               <div class="item-service__text">
-                Горячие обеды, ароматной выпечки, салаты и многого другого
+                Горячие обеды, ароматной выпечки, салаты и много другого
               </div>
               <div class="item-service__image">
                 <img src="@img/banket-image.png" alt="">
@@ -97,6 +97,91 @@
                 <img src="@img/banket-image.png" alt="">
               </div>
             </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="index-catalog">
+        <div class="index-catalog__container">
+          <h2 class="index-catalog__title title">Меню</h2>
+          <div class="index-catalog__tab tab">
+            <div class="tab__head">
+              <button type="button" class="tab__trigger active" data-id="all">Всё</button>
+              <button type="button" class="tab__trigger" data-id="breakfast">Завраки</button>
+              <button type="button" class="tab__trigger" data-id="dinner">Обеды</button>
+              <button type="button" class="tab__trigger" data-id="day">Меню дня</button>
+              <button type="button" class="tab__trigger" data-id="funeral">Поминальное меню</button>
+            </div>
+            <div class="tab__content">
+              <div class="tab__content-grid" data-id="all">
+                <div class="tab__content-item">
+                  <div class="tab__content-image">
+                    <img src="@img/menu/food-1.jpg" alt="" title="">
+                  </div>
+                  <a href="#" class="tab__content-name">Блинчики</a>
+                  <p class="tab__content-price">85₽</p>
+                  <div class="tab__content-btns">
+                    <a href="#" class="tab__content-btn">Подробнее</a>
+                    <a href="#" class="tab__content-btn">Описание</a>
+                  </div>
+                </div>
+                <div class="tab__content-item">
+                  <div class="tab__content-image">
+                    <img src="@img/menu/food-1.jpg" alt="" title="">
+                  </div>
+                  <a href="#" class="tab__content-name">Блинчики</a>
+                  <p class="tab__content-price">85₽</p>
+                  <div class="tab__content-btns">
+                    <a href="#" class="tab__content-btn">Подробнее</a>
+                    <a href="#" class="tab__content-btn">Описание</a>
+                  </div>
+                </div>
+                <div class="tab__content-item">
+                  <div class="tab__content-image">
+                    <img src="@img/menu/food-1.jpg" alt="" title="">
+                  </div>
+                  <a href="#" class="tab__content-name">Блинчики</a>
+                  <p class="tab__content-price">85₽</p>
+                  <div class="tab__content-btns">
+                    <a href="#" class="tab__content-btn">Подробнее</a>
+                    <a href="#" class="tab__content-btn">Описание</a>
+                  </div>
+                </div>
+                <div class="tab__content-item">
+                  <div class="tab__content-image">
+                    <img src="@img/menu/food-1.jpg" alt="" title="">
+                  </div>
+                  <a href="#" class="tab__content-name">Блинчики</a>
+                  <p class="tab__content-price">85₽</p>
+                  <div class="tab__content-btns">
+                    <a href="#" class="tab__content-btn">Подробнее</a>
+                    <a href="#" class="tab__content-btn">Описание</a>
+                  </div>
+                </div>
+                <div class="tab__content-item">
+                  <div class="tab__content-image">
+                    <img src="@img/menu/food-1.jpg" alt="" title="">
+                  </div>
+                  <a href="#" class="tab__content-name">Блинчики</a>
+                  <p class="tab__content-price">85₽</p>
+                  <div class="tab__content-btns">
+                    <a href="#" class="tab__content-btn">Подробнее</a>
+                    <a href="#" class="tab__content-btn">Описание</a>
+                  </div>
+                </div>
+                <div class="tab__content-item">
+                  <div class="tab__content-image">
+                    <img src="@img/menu/food-1.jpg" alt="" title="">
+                  </div>
+                  <a href="#" class="tab__content-name">Блинчики</a>
+                  <p class="tab__content-price">85₽</p>
+                  <div class="tab__content-btns">
+                    <a href="#" class="tab__content-btn">Подробнее</a>
+                    <a href="#" class="tab__content-btn">Описание</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -250,6 +335,54 @@
             <input type="text" name="message" placeholder="Сообщение" class="callback__input" />
             <button type="submit" class="callback__submit">Отправить</button>
           </form>
+        </div>
+      </div>
+
+      <div class="index-gallery">
+        <div class="index-gallery__container">
+          <div class="index-gallery__title title">Галерея</div>
+          <div class="index-gallery__header">
+            <a href="#">Салаты</a>
+            <a href="#">Горячее</a>
+            <a href="#">Торты и десерты</a>
+            <a href="#">Выпечка</a>
+            <a href="#">Напитки</a>
+            <a href="#">Супы</a>
+            <a href="#">Гариниры</a>
+          </div>
+          <div class="index-gallery__grid">
+            <a href="#" class="index-gallery__item">
+              <img src="@img/gallery/IMG_4300.jpg" alt="">
+            </a>
+            <a href="#" class="index-gallery__item">
+              <img src="@img/gallery/IMG_4300.jpg" alt="">
+
+            </a>
+            <a href="#" class="index-gallery__item">
+              <img src="@img/gallery/IMG_4300.jpg" alt="">
+
+            </a>
+            <a href="#" class="index-gallery__item">
+              <img src="@img/gallery/IMG_4300.jpg" alt="">
+
+            </a>
+            <a href="#" class="index-gallery__item">
+              <img src="@img/gallery/IMG_4300.jpg" alt="">
+
+            </a>
+            <a href="#" class="index-gallery__item">
+              <img src="@img/gallery/IMG_4300.jpg" alt="">
+
+            </a>
+            <a href="#" class="index-gallery__item">
+              <img src="@img/gallery/IMG_4300.jpg" alt="">
+
+            </a>
+            <a href="#" class="index-gallery__item">
+              <img src="@img/gallery/IMG_4300.jpg" alt="">
+
+            </a>
+          </div>
         </div>
       </div>
     </main>
