feat: map block develop

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
 
       <div class="index-catalog">
         <div class="index-catalog__container">
-          <h2 class="index-catalog__title title">Меню</h2>
+          <h2 class="index-catalog__title title--dark">Меню</h2>
           <div class="index-catalog__tab tab">
             <div class="tab__head">
               <button type="button" class="tab__trigger active" data-id="all">Всё</button>
@@ -207,7 +207,7 @@
         <div class="reviews__container">
           <div class="reviews__inner">
             <div class="reviews__block-top">
-              <h2 class="reviews__title title">Отзывы клиентов</h2>
+              <h2 class="reviews__title title--dark">Отзывы клиентов</h2>
             </div>
             <div class="reviews__slider swiper">
               <div class="reviews__wrapper swiper-wrapper">
@@ -340,9 +340,9 @@
 
       <div class="index-gallery">
         <div class="index-gallery__container">
-          <div class="index-gallery__title title">Галерея</div>
+          <div class="index-gallery__title title--dark">Галерея</div>
           <div class="index-gallery__header">
-            <a href="#">Салаты</a>
+            <a href="#" class="active">Салаты</a>
             <a href="#">Горячее</a>
             <a href="#">Торты и десерты</a>
             <a href="#">Выпечка</a>
@@ -351,37 +351,70 @@
             <a href="#">Гариниры</a>
           </div>
           <div class="index-gallery__grid">
-            <a href="#" class="index-gallery__item">
+            <a href="@img/gallery/IMG_4300.jpg" data-gall="myGallery" class="index-gallery__item">
               <img src="@img/gallery/IMG_4300.jpg" alt="">
+              <i class="fa-regular fa-square-plus"></i>
             </a>
-            <a href="#" class="index-gallery__item">
+            <a href="@img/gallery/a7001b41_2f6b_4c29_89bb_38a95a06953b-_1_.jpg" data-gall="myGallery"
+              class="index-gallery__item">
+              <img src="@img/gallery/a7001b41_2f6b_4c29_89bb_38a95a06953b-_1_.jpg" alt="">
+              <i class="fa-regular fa-square-plus"></i>
+            </a>
+            <a href="@img/gallery/furshet_svadba.jpg" data-gall="myGallery" class="index-gallery__item">
+              <img src="@img/gallery/furshet_svadba.jpg" alt="">
+              <i class="fa-regular fa-square-plus"></i>
+            </a>
+            <a href="@img/gallery/y-_131-of-188_-_1_.jpg" data-gall="myGallery" class="index-gallery__item">
+              <img src="@img/gallery/y-_131-of-188_-_1_.jpg" alt="">
+              <i class="fa-regular fa-square-plus"></i>
+            </a>
+            <a href="@img/gallery/y-_211-of-254_-_1_.jpg" data-gall="myGallery" class="index-gallery__item">
+              <img src="@img/gallery/y-_211-of-254_-_1_.jpg" alt="">
+              <i class="fa-regular fa-square-plus"></i>
+            </a>
+            <a href="@img/gallery/y-_40-of-116_-_1_.jpg" data-gall="myGallery" class="index-gallery__item">
+              <img src="@img/gallery/y-_40-of-116_-_1_.jpg" alt="">
+              <i class="fa-regular fa-square-plus"></i>
+            </a>
+            <a href="@img/gallery/IMG_4300.jpg" data-gall="myGallery" class="index-gallery__item">
               <img src="@img/gallery/IMG_4300.jpg" alt="">
+              <i class="fa-regular fa-square-plus"></i>
+            </a>
+            <a href="@img/gallery/furshet_svadba.jpg" data-gall="myGallery" class="index-gallery__item">
+              <img src="@img/gallery/furshet_svadba.jpg" alt="">
+              <i class="fa-regular fa-square-plus"></i>
+            </a>
+          </div>
+        </div>
+      </div>
 
-            </a>
-            <a href="#" class="index-gallery__item">
-              <img src="@img/gallery/IMG_4300.jpg" alt="">
-
-            </a>
-            <a href="#" class="index-gallery__item">
-              <img src="@img/gallery/IMG_4300.jpg" alt="">
-
-            </a>
-            <a href="#" class="index-gallery__item">
-              <img src="@img/gallery/IMG_4300.jpg" alt="">
-
-            </a>
-            <a href="#" class="index-gallery__item">
-              <img src="@img/gallery/IMG_4300.jpg" alt="">
-
-            </a>
-            <a href="#" class="index-gallery__item">
-              <img src="@img/gallery/IMG_4300.jpg" alt="">
-
-            </a>
-            <a href="#" class="index-gallery__item">
-              <img src="@img/gallery/IMG_4300.jpg" alt="">
-
-            </a>
+      <div class="map" style="background-image: url(../img/map.jpeg);">
+        <div class="map__container">
+          <div class="map__inner">
+            <div class="map__content">
+              <div class="map__contact">
+                <p class="map__title">Столовая Трапеза</p>
+                <div class="map__contact-items">
+                  <a href="tel:+79999999999">+7 (999) 999-99-99</a>
+                  <p>ул.Ленина 193</p>
+                  <a href="mailto:trapeza@mail.ru">trapeza@mail.ru</a>
+                  <a href="#">WhatsApp</a>
+                  <a href="#">Telegram</a>
+                  <a href="#">Viber</a>
+                </div>
+              </div>
+              <div class="map__callback">
+                <div class="map__callback-row">
+                  <div class="map__callback-avatar">
+                    <img src="@img/face.png" alt="">
+                  </div>
+                  <div class="map__callback-action">
+                    <p>Связаться с менеджером</p>
+                    <button type="button">Написать</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
