feat: deploy prod

--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -48,6 +48,13 @@
     </div>
   </div>
 </footer>
+<div class="author">
+  <div class="author__container">
+    <div class="author__inner">
+      Разработка сайта | <a href="#">РА Аврора</a>
+    </div>
+  </div>
+</div>
 
 <div class="popup-menu">
   <button type="button" class="popup-menu__close"></button>
