--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
   <div class="wrapper">
     @@include('html/_header.htm',{})
     <main class="page">
-      <div class="line-left"></div>
-      <div class="line-right"></div>
       @@include('html/side-menu.html',{})
 
       <div class="index-banner" style="background-image: url(../img/banner-first-3.jpg);">
@@ -43,7 +41,7 @@
                 Горячие обеды, ароматной выпечки, салаты и много другого
               </div>
               <div class="item-service__image">
-                <img src="@img/banket-image.png" alt="">
+                <img src="@img/2_6.jpg" alt="">
               </div>
             </a>
             <a href="#" class="index-service__item item-service">
@@ -60,7 +58,7 @@
                 Организуем и оформим любое мероприятие
               </div>
               <div class="item-service__image">
-                <img src="@img/banket-image.png" alt="">
+                <img src="@img/2_5.jpg" alt="">
               </div>
             </a>
             <a href="#" class="index-service__item item-service">
@@ -94,7 +92,7 @@
                 Мы рядом с вами даже в самые тяжелые моменты
               </div>
               <div class="item-service__image">
-                <img src="@img/banket-image.png" alt="">
+                <img src="@img/2_2.jpg" alt="">
               </div>
             </a>
           </div>
