feat: logo footer, link author footer

--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -37,7 +37,7 @@
         </nav>
       </div>
       <div class="footer__col">
-        <div class="footer__logo">Трапеза</div>
+        <div class="footer__logo"><img src="@img/logo-2-white.svg" alt=""></div>
         <nav class="footer__nav">
           <a href="#">Политика конфиденциальности</a>
           <a href="#">Статьи</a>
